Fixed molt actions being cut off in webpage

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -396,7 +396,7 @@ div.mini-molt:hover {
     top: 0;
 }
 .mini-molt-text-box {
-    overflow: hidden;
+    overflow: visible;
 }
 .mini-molt-content {
     overflow-wrap: break-word;
